--- a/about.html
+++ b/about.html
@@ -6,8 +6,9 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <link rel = stylesheet href = css/main.css>
+        <meta name = description content = "Essays and exhibitions.">
 
+        <link rel = stylesheet href = css/main.css>
         <title>Nathan Ford | About</title>
 	</head>
 
@@ -32,7 +33,7 @@
 
             <a href = essay_7.html>
                 <div class = blurb>
-                    <span>Catalogue Essay 2021 ~ Aidan Quinn</span>
+                    <span>Catalogue essay 2021 ~ Aidan Quinn</span>
                     <br>
                     <i>Keep me away from the wisdom which does not cry, the philosophy which does not laugh and the greatness which does not bow before children.</i>
                     ~ Kahlil Gibran
@@ -41,7 +42,7 @@
 
             <a href = essay_6.html>
                 <div class = blurb>
-                    <span>Catalogue Essay 2019 ~ Aidan Quinn</span>
+                    <span>Catalogue essay 2019 ~ Aidan Quinn</span>
                     <br>
                     <i>Anybody who preserves the ability to recognize beauty will never get old.</i>
                     ~ Franz Kafka
@@ -50,7 +51,7 @@
 
             <a href = essay_5.html>
                 <div class = blurb>
-                    <span>Catalogue Essay 2017 ~ Aidan Quinn</span>
+                    <span>Catalogue essay 2017 ~ Aidan Quinn</span>
                     <br>
                     <i>Sometimes I wonder how all those who do not write, compose, or paint can manage to escape the madness, melancholia, the panic and fear which is inherent in a human situation.</i>
                     ~ Graham Greene
@@ -59,7 +60,7 @@
 
             <a href = essay_4.html>
                 <div class = blurb>
-                    <span>Catalogue Essay 2015 ~ Aidan Quinn</span>
+                    <span>Catalogue essay 2015 ~ Aidan Quinn</span>
                     <br>
                     <i>What will survive of us is love.</i>
                     ~ Philip Larkin
@@ -68,7 +69,7 @@
 
             <a href = essay_3.html>
                 <div class = blurb>
-                    <span>Catalogue Essay 2013 ~ Aidan Quinn</span>
+                    <span>Catalogue essay 2013 ~ Aidan Quinn</span>
                     <br>
                     <i>My child could do that.</i>
                     ~ [anonymous]
@@ -77,7 +78,7 @@
 
             <a href = essay_2.html>
                 <div class = blurb>
-                    <span>Catalogue Essay 2011 ~ Aidan Quinn</span>
+                    <span>Catalogue essay 2011 ~ Aidan Quinn</span>
                     <br>
                     <i>If you dig deep enough, all of our dreams are the same.</i>
                     ~ Amos Oz
@@ -86,7 +87,7 @@
 
             <a href = essay_1.html>
                 <div class = blurb>
-                    <span>Catalogue Essay 2009 ~ Aidan Quinn</span>
+                    <span>Catalogue essay 2009 ~ Aidan Quinn</span>
                     <br>
                     <i>It’s hard being black. You ever been black? I was black once, when I was poor.</i>
                     ~ Larry Holmes
