--- a/essay_7.html
+++ b/essay_7.html
@@ -6,8 +6,9 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <link rel = stylesheet href = css/main.css>
+		<meta name = description content = "Catalogue essay 2021 by Aidan Quinn">
 
+        <link rel = stylesheet href = css/main.css>
         <title>Nathan Ford | Essay 2021</title>
 	</head>
 
@@ -22,7 +23,7 @@
         </section>
 
         <section class = main>
-			<h1>Catalogue Essay 2021 ~ Aidan Quinn</h1>
+			<h1>Catalogue essay 2021 ~ Aidan Quinn</h1>
 
 			<i>Keep me away from the wisdom which does not cry, the philosophy which does not laugh and the greatness which does not bow before children.</i>
 			~ Kahlil Gibran
