--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 
 		<meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-		<meta name = keywords content = "nathan ford, nathan ford artist, nathan ford works, nathan ford british artist, nathan ford uk, nathan ford art, nathan ford drawings, nathan ford paintings, project greyhope, greyhope paintings">
+		<meta name = description content = "Paintings by Nathan Ford.">
 
 		<link rel = stylesheet href = css/main.css>
-
 		<title>Nathan Ford</title>
 	</head>
 
