--- a/works.html
+++ b/works.html
@@ -6,18 +6,17 @@
 
 		<meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
+		<meta name = description content = "Paintings by Nathan Ford.">
 
 		<link rel = stylesheet href = css/main.css>
 		<link rel = stylesheet href = css/chocolat.css>
 
-		<!-- one day, we will get rid of this stupid jquery link -->
 		<script src = https://code.jquery.com/jquery-3.3.1.min.js></script>
 		<script src = js/jquery.chocolat.min.js></script>
 
 		<title>Nathan Ford | Works</title>
 			
 		<script>
-			// I dislike jquery, it's not pure enough
 			$(() => $("#gallery").Chocolat({imageSize: "contain"}))
 		</script>
 	</head>
