--- a/essay_2.html
+++ b/essay_2.html
@@ -6,8 +6,9 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <link rel = stylesheet href = css/main.css>
+		<meta name = description content = "Catalogue essay 2011 by Aidan Quinn">
 
+        <link rel = stylesheet href = css/main.css>
         <title>Nathan Ford | Essay 2011</title>
 	</head>
 
@@ -22,7 +23,7 @@
         </section>
 
         <section class = main>
-			<h1>Catalogue Essay 2011 ~ Aidan Quinn</h1>
+			<h1>Catalogue essay 2011 ~ Aidan Quinn</h1>
 
 			<i>If you dig deep enough, all of our dreams are the same.</i>
 			~ Amos Oz
