--- a/essay_3.html
+++ b/essay_3.html
@@ -6,8 +6,9 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <link rel = stylesheet href = css/main.css>
+		<meta name = description content = "Catalogue essay 2013 by Aidan Quinn">
 
+        <link rel = stylesheet href = css/main.css>
         <title>Nathan Ford | Essay 2013</title>
 	</head>
 
@@ -22,7 +23,7 @@
         </section>
 
         <section class = main>
-			<h1>Catalogue Essay 2013 ~ Aidan Quinn</h1>
+			<h1>Catalogue essay 2013 ~ Aidan Quinn</h1>
 
 			<i>My child could do that.</i>
 			~ [anonymous]
