--- a/essay_4.html
+++ b/essay_4.html
@@ -6,8 +6,9 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <link rel = stylesheet href = css/main.css>
+        <meta name = description content = "Catalogue essay 2015 by Aidan Quinn">
 
+        <link rel = stylesheet href = css/main.css>
         <title>Nathan Ford | Essay 2015</title>
 	</head>
 
@@ -22,7 +23,7 @@
         </section>
 
         <section class = main>
-			<h1>Catalogue Essay 2015 ~ Aidan Quinn</h1>
+			<h1>Catalogue essay 2015 ~ Aidan Quinn</h1>
 
 			<i>What will survive of us is love.</i>
 			~ Philip Larkin
