--- a/essay_5.html
+++ b/essay_5.html
@@ -6,8 +6,9 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <link rel = stylesheet href = css/main.css>
+		<meta name = description content = "Catalogue essay 2017 by Aidan Quinn">
 
+        <link rel = stylesheet href = css/main.css>
         <title>Nathan Ford | Essay 2017</title>
 	</head>
 
@@ -22,7 +23,7 @@
         </section>
 
         <section class = main>
-			<h1>Catalogue Essay 2017 ~ Aidan Quinn</h1>
+			<h1>Catalogue essay 2017 ~ Aidan Quinn</h1>
 
 			<i>Sometimes I wonder how all those who do not write, compose, or paint can manage to escape the madness, melancholia, the panic and fear which is inherent in a human situation.</i>
 			~ Graham Greene
