--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,9 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <link rel = stylesheet href = css/main.css>
+        <meta name = description content = "The GreyHope project.">
 
+        <link rel = stylesheet href = css/main.css>
         <title>Project GreyHope</title>
 	</head>
 
