--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <meta name = description content = "Essays and exhibitions.">
+        <meta name = description content = "Essays and exhibitions">
 
         <link rel = stylesheet href = css/main.css>
         <title>Nathan Ford | About</title>
