--- a/lockdown.html
+++ b/lockdown.html
@@ -6,7 +6,7 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-		<meta name = description content = "Ninety days of lockdown.">
+		<meta name = description content = "Ninety days of lockdown">
 
         <link rel = stylesheet href = css/main.css>
 		<link rel = stylesheet href = css/chocolat.css>
