--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 
         <meta charset = utf-8>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
-        <meta name = description content = "Project GreyHope.">
+        <meta name = description content = "Project GreyHope">
 
         <link rel = stylesheet href = css/main.css>
         <title>Project GreyHope</title>
