--- a/works.html
+++ b/works.html
@@ -97,7 +97,7 @@
 				{title: "Reuben 7.20", width: 20, height: 28, year: 2020, surface: "canvas", sold: true},
 				{title: "Flock V", width: 170, height: 122, year: 2020, surface: "board", sold: true},
 				{title: "The Entertainer", width: 28, height: 20, year: 2016, surface: "canvas", sold: true},
-				{title: "Old Romantic", width: 170, height: 122, year: 2020, surface: "board", sold: true},
+				{title: "Old Romantic", width: 170, height: 122, year: 2020, surface: "board", sold: false},
 				{title: "Spring 20.4", width: 20, height: 28, year: 2020, surface: "canvas", sold: true},
 				{title: "Sunny Inside", width: 121, height: 80, year: 2021, surface: "board", sold: false},
 				{title: "Self 9.20", width: 20, height: 28, year: 2020, surface: "canvas", sold: false},
