--- a/essay_2.html
+++ b/essay_2.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 	<head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src = "https://www.googletagmanager.com/gtag/js?id=G-7WP82B4W69"></script>
+        <script async src = "https://www.googletagmanager.com/gtag/js?id=G-LD4L8FCK6D"></script>
         <script src = js/main.js></script>
 
         <meta charset = utf-8>
