--- a/works.html
+++ b/works.html
@@ -13,12 +13,9 @@
 
 		<script src = https://code.jquery.com/jquery-3.3.1.min.js></script>
 		<script src = js/jquery.chocolat.min.js></script>
+		<script>$(() => $("#gallery").Chocolat({imageSize: "contain"}))</script>
 
 		<title>Nathan Ford | Works</title>
-			
-		<script>
-			$(() => $("#gallery").Chocolat({imageSize: "contain"}))
-		</script>
 	</head>
 
 	<body>
