--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 				canvas.width = innerWidth * ratio
 				canvas.height = innerHeight * ratio
 
-				canvas.style.width = canvas.width + "px"
-				canvas.style.height = canvas.height + "px"
+				canvas.style.width = innerWidth + "px"
+				canvas.style.height = innerHeight + "px"
 				context.scale(ratio, ratio)
 			}
 
