--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
 		<title>Nathan Ford</title>
 
 		<style>
+			html, body {height: 100%}
+
 			body {
 				overflow: hidden;
 				background-color: #999
+			}
+
+			canvas {
+				width: 100%;
+				height: 100%
 			}
 		</style>
 	</head>
@@ -36,9 +43,6 @@
 
 				canvas.width = innerWidth * ratio
 				canvas.height = innerHeight * ratio
-
-				canvas.style.width = innerWidth + "px"
-				canvas.style.height = innerHeight + "px"
 				context.scale(ratio, ratio)
 			}
 
