--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			const TOTAL_NUMBER_OF_SLIDESHOW_IMAGES = 4
 
 			const resize = () => {
-				const ratio = devicePixelRatio || 1
+				const ratio = 1//devicePixelRatio || 2
 
 				canvas.width = innerWidth * ratio
 				canvas.height = innerHeight * ratio
