--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                     const ratio = width > height ? width : height
 
                     ctx.drawImage(
-                        images[index], ~~((canvas.width - images[index].width * ratio) / 2 / devicePixelRatio),
-                        ~~((canvas.height - images[index].height * ratio) / 2 / devicePixelRatio),
-                        ~~(images[index].width * ratio / devicePixelRatio),
-                        ~~(images[index].height * ratio / devicePixelRatio))
+                        images[index], (canvas.width - images[index].width * ratio) / 2 / devicePixelRatio,
+                        (canvas.height - images[index].height * ratio) / 2 / devicePixelRatio,
+                        images[index].width * ratio / devicePixelRatio,
+                        images[index].height * ratio / devicePixelRatio)
                 }
 
                 slider.timer ++
