--- a/essay_4.html
+++ b/essay_4.html
@@ -15,6 +15,7 @@
         <section class = top>
             <a href = "/"><img src = assets/images/icons/title.png></a>
             <img onclick = bars(this) src = assets/images/icons/bars.png>
+            <img onclick = theme(this) class = theme></i>
             <a href = works><img src = assets/images/icons/works.png></a>
             <a href = projects><img src = assets/images/icons/projects.png></a>
             <a href = about class = this><img src = assets/images/icons/about.png></a>
