--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,6 @@
 
         <style>
             section > div {
-                color: #555;
                 text-align: center;
                 margin-top: 2em
             }
@@ -37,7 +36,6 @@
                 position: absolute;
                 bottom: 50%;
                 padding: 1em;
-                transition: 0.4s ease;
                 background-color: #fff0;
                 transform: translateY(50%);
                 filter: invert(100%)
@@ -72,8 +70,9 @@
 
     <body>
         <section class = top>
-            <a href = "/"><img src = assets/images/icons/crossed.png></a>
+            <a href = "/"><img src = assets/images/icons/title.png></a>
             <img onclick = bars(this) src = assets/images/icons/bars.png>
+            <img onclick = theme(this) class = theme></i>
             <a href = works><img src = assets/images/icons/works.png></a>
             <a href = projects class = this><img src = assets/images/icons/projects.png></a>
             <a href = about><img src = assets/images/icons/about.png></a>
