--- a/works.html
+++ b/works.html
@@ -78,12 +78,13 @@
 
         <section class = main>
             <div>
+                <a class = spotlight data-page = false href = assets/images/reuben_2.22_large.jpg title = "Reuben 2.22 - oil on canvas - 20cm × 28cm - 2022"><img src = assets/images/reuben_2.22_small.jpg title = "Reuben 2.22"></a>
                 <a class = spotlight data-page = false href = assets/images/nebula_3_large.jpg title = "Nebula 3 - oil on board - 170cm × 122cm - 2022 - sold"><img src = assets/images/nebula_3_small.jpg title = "Nebula 3"></a>
                 <a class = spotlight data-page = false href = assets/images/another_sunday_morning_large.jpg title = "Another Sunday Morning - oil on canvas - 20cm × 28cm - 2021 - sold"><img src = assets/images/another_sunday_morning_small.jpg title = "Another Sunday Morning"></a>
-                <a class = spotlight data-page = false href = assets/images/self_10.21_large.jpg title = "Self 10.21 - oil on canvas - 20cm × 28cm - 2021"><img src = assets/images/self_10.21_small.jpg title = "Self 10.21"></a>
+                <a class = spotlight data-page = false href = assets/images/self_10.21_large.jpg title = "Self 10.21 - oil on canvas - 20cm × 28cm - 2021 - sold"><img src = assets/images/self_10.21_small.jpg title = "Self 10.21"></a>
                 <a class = spotlight data-page = false href = assets/images/anna_8.21_large.jpg title = "Anna 8.21 - oil on board - 58cm × 74cm - 2021"><img src = assets/images/anna_8.21_small.jpg title = "Anna 8.21"></a>
                 <a class = spotlight data-page = false href = assets/images/31.3.21_large.jpg title = "31.3.21 - oil on canvas - 28cm × 20cm - 2021"><img src = assets/images/31.3.21_small.jpg title = "31.3.21"></a>
-                <a class = spotlight data-page = false href = assets/images/flock_v_large.jpg title = "Flock V - oil on board - 170cm × 122cm - 2020 - sold"><img src = assets/images/flock_v_small.jpg title = "Flock V"></a>
+                <a class = spotlight data-page = false href = assets/images/flock_7_large.jpg title = "Flock 7 - oil on board - 170cm × 122cm - 2022"><img src = assets/images/flock_7_small.jpg title = "Flock 7"></a>
                 <a class = spotlight data-page = false href = assets/images/19.5.21_large.jpg title = "19.5.21 - oil on canvas - 28cm × 20cm - 2021"><img src = assets/images/19.5.21_small.jpg title = "19.5.21"></a>
                 <a class = spotlight data-page = false href = assets/images/salvage_2.20_large.jpg title = "Salvage 2.20 - oil on canvas - 28cm × 44cm - 2020 - sold"><img src = assets/images/salvage_2.20_small.jpg title = "Salvage 2.20"></a>
                 <a class = spotlight data-page = false href = assets/images/lockdown_17_90_large.jpg title = "Lockdown 17/90 - oil on canvas - 20cm × 14cm - 2020 - sold"><img src = assets/images/lockdown_17_90_small.jpg title = "Lockdown 17/90"></a>
@@ -111,12 +112,13 @@
                 <a class = spotlight data-page = false href = assets/images/boundary_2_large.jpg title = "Boundary 2 - oil on canvas - 212cm × 120cm - 2012 - sold"><img src = assets/images/boundary_2_small.jpg title = "Boundary 2"></a>
                 <a class = spotlight data-page = false href = assets/images/joachim_1.12_large.jpg title = "Joachim 1.12 - oil on canvas - 20cm × 28cm - 2012 - sold"><img src = assets/images/joachim_1.12_small.jpg title = "Joachim 1.12"></a>
 
+                <a class = spotlight data-page = false href = assets/images/flock_6_large.jpg title = "Flock 6 - oil on board - 170cm × 122cm - 2022"><img src = assets/images/flock_6_small.jpg title = "Flock 6"></a>
                 <a class = spotlight data-page = false href = assets/images/joachim_8.21_large.jpg title = "Joachim 8.21 - oil on board - 58cm × 74cm - 2021 - sold"><img src = assets/images/joachim_8.21_small.jpg title = "Joachim 8.21"></a>
                 <a class = spotlight data-page = false href = assets/images/at_the_exit_large.jpg title = "At The Exit - oil on board - 170cm × 122cm - 2020"><img src = assets/images/at_the_exit_small.jpg title = "At The Exit"></a>
                 <a class = spotlight data-page = false href = assets/images/reuben_4.22_large.jpg title = "Reuben 4.22 - oil on board - 58cm × 74cm - 2022"><img src = assets/images/reuben_4.22_small.jpg title = "Reuben 4.22"></a>
+                <a class = spotlight data-page = false href = assets/images/the_dump_large.jpg title = "The Dump - oil on board - 170cm × 122cm - 2022"><img src = assets/images/the_dump_small.jpg title = "The Dump"></a>
                 <a class = spotlight data-page = false href = assets/images/3.7.21_large.jpg title = "3.7.21 - oil on canvas - 28cm × 20cm - 2021"><img src = assets/images/3.7.21_small.jpg title = "3.7.21"></a>
                 <a class = spotlight data-page = false href = assets/images/x_large.jpg title = "X - oil on canvas - 28cm × 20cm - 2021"><img src = assets/images/x_small.jpg title = "X"></a>
-                <a class = spotlight data-page = false href = assets/images/monument_large.jpg title = "Monument - oil on board - 122cm × 170cm - 2021 - sold"><img src = assets/images/monument_small.jpg title = "Monument"></a>
                 <a class = spotlight data-page = false href = assets/images/fallen_2_large.jpg title = "Fallen 2 - oil on canvas - 15cm × 11cm - 2021"><img src = assets/images/fallen_2_small.jpg title = "Fallen 2"></a>
                 <a class = spotlight data-page = false href = assets/images/epic_large.jpg title = "Epic - oil on board - 200cm × 122cm - 2019 - sold"><img src = assets/images/epic_small.jpg title = "Epic"></a>
                 <a class = spotlight data-page = false href = assets/images/reuben_8.21_large.jpg title = "Reuben 8.21 - oil on board - 58cm × 74cm - 2021"><img src = assets/images/reuben_8.21_small.jpg title = "Reuben 8.21"></a>
@@ -137,13 +139,14 @@
                 <a class = spotlight data-page = false href = assets/images/painted_large.jpg title = "Painted - oil on canvas - 115cm × 130cm - 2008 - sold"><img src = assets/images/painted_small.jpg title = "Painted"></a>
                 <a class = spotlight data-page = false href = assets/images/rose-marie_large.jpg title = "Rose-Marie - oil on canvas - 20cm × 28cm - 2014 - sold"><img src = assets/images/rose-marie_small.jpg title = "Rose-Marie"></a>
                 <a class = spotlight data-page = false href = assets/images/reuben_9.15_large.jpg title = "Reuben 9.15 - oil on linen - 180cm × 97cm - 2015 - sold"><img src = assets/images/reuben_9.15_small.jpg title = "Reuben 9.15"></a>
-                <a class = spotlight data-page = false href = assets/images/monsters_of_remorse_large.jpg title = "Monsters of Remorse - oil on canvas - 20cm × 28cm - 2013"><img src = assets/images/monsters_of_remorse_small.jpg title = "Monsters of Remorse"></a>
+                <a class = spotlight data-page = false href = assets/images/monsters_of_remorse_large.jpg title = "Monsters of Remorse - oil on canvas - 20cm × 28cm - 2013 - sold"><img src = assets/images/monsters_of_remorse_small.jpg title = "Monsters of Remorse"></a>
                 <a class = spotlight data-page = false href = assets/images/cormack_3_large.jpg title = "Cormack 3 - oil on canvas - 20cm × 28cm - 2015 - nfs"><img src = assets/images/cormack_3_small.jpg title = "Cormack 3"></a>
                 <a class = spotlight data-page = false href = assets/images/bedroom_window_large.jpg title = "Bedroom Window - oil on canvas - 28cm × 20cm - 2014 - sold"><img src = assets/images/bedroom_window_small.jpg title = "Bedroom Window"></a>
                 <a class = spotlight data-page = false href = assets/images/reuben_10.14_large.jpg title = "Reuben 10.14 - oil on canvas - 20cm × 28cm - 2014 - sold"><img src = assets/images/reuben_10.14_small.jpg title = "Reuben 10.14"></a>
                 <a class = spotlight data-page = false href = assets/images/casualty_large.jpg title = "Casualty - oil on canvas - 20cm × 14cm - 2012 - sold"><img src = assets/images/casualty_small.jpg title = "Casualty"></a>
                 <a class = spotlight data-page = false href = assets/images/salvage_1_large.jpg title = "Salvage 1 - oil on canvas - 20cm × 28cm - 2012 - sold"><img src = assets/images/salvage_1_small.jpg title = "Salvage 1"></a>
 
+                <a class = spotlight data-page = false href = assets/images/self_2.22_large.jpg title = "Self 2.22 - oil on canvas - 20cm × 28cm - 2022"><img src = assets/images/self_2.22_small.jpg title = "Self 2.22"></a>
                 <a class = spotlight data-page = false href = assets/images/transit_large.jpg title = "Transit - oil on board - 80cm × 109cm - 2020 - sold"><img src = assets/images/transit_small.jpg title = "Transit"></a>
                 <a class = spotlight data-page = false href = assets/images/joachim_7.20_large.jpg title = "Joachim 7.20 - oil on canvas - 20cm × 28cm - 2020 - sold"><img src = assets/images/joachim_7.20_small.jpg title = "Joachim 7.20"></a>
                 <a class = spotlight data-page = false href = assets/images/noto_large.jpg title = "Noto - oil on board - 160cm × 122cm - 2019 - sold"><img src = assets/images/noto_small.jpg title = "Noto"></a>
@@ -177,6 +180,7 @@
                 <a class = spotlight data-page = false href = assets/images/pox_large.jpg title = "Pox - oil on canvas - 20cm × 28cm - 2010 - sold"><img src = assets/images/pox_small.jpg title = "Pox"></a>
                 <a class = spotlight data-page = false href = assets/images/boo_1_large.jpg title = "Boo 1 - oil on canvas - 20cm × 28cm - 2010 - sold"><img src = assets/images/boo_1_small.jpg title = "Boo 1"></a>
 
+                <a class = spotlight data-page = false href = assets/images/commander_and_chief_large.jpg title = "Commander and Chief - oil on board - 170cm × 122cm - 2022"><img src = assets/images/commander_and_chief_small.jpg title = "Commander and Chief"></a>
                 <a class = spotlight data-page = false href = assets/images/anna_4.22_large.jpg title = "Anna 4.22 - oil on board - 58cm × 74cm - 2022"><img src = assets/images/anna_4.22_small.jpg title = "Anna 4.22"></a>
                 <a class = spotlight data-page = false href = assets/images/salvage_12.19_large.jpg title = "Salvage 12.19 - oil on canvas - 28cm × 40cm - 2019 - sold"><img src = assets/images/salvage_12.19_small.jpg title = "Salvage 12.19"></a>
                 <a class = spotlight data-page = false href = assets/images/24.3.21_large.jpg title = "24.3.21 - oil on canvas - 28cm × 20cm - 2021"><img src = assets/images/24.3.21_small.jpg title = "24.3.21"></a>
