--- a/about.html
+++ b/about.html
@@ -131,6 +131,7 @@
 
             <ul>
                 <li>Beaux Arts, Bath. Solo Exhibitions 2003, 2005, 2007, 2009, 2011, 2013, 2015, 2017, 2019, 2021</li>
+                <li>British Art Fair, London. 2022</li>
                 <li>The London Art Fair, London. 2006 - 2022</li>
                 <li>BP Awards, National Portrait Gallery, London. 2000, 2010, 2011, 2012, 2018</li>
                 <li>Ruth Borchard Self Portrait Prize, Piano Nobile. 2017</li>
