Smaller font on mobile devices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             div {
                 position: fixed;
                 font-family: elite;
-                font-size: 40px;
+                font-size: var(--large);
                 background-color: #fff8;
                 border-top-right-radius: .3em;
                 border-bottom-right-radius: .3em;
